# IF-Internship

./: dune-project
_build/: .db  .digest-db  log
_build/default/: IFinternship.dune-package  IFinternship.install  IFinternship.opam
_build/default/lib/: IFinternship.cma  IFinternship.cmxa  IFinternship.cmxs
_build/default/lib/.IFinternship.objs/byte/: iFinternship.cmi  iFinternship.cmo  iFinternship.cmt
_build/default/lib/.IFinternship.objs/native/: iFinternship.cmx
_build/default/lib/.merlin-conf/: lib-IFinternship
_build/default/test/.merlin-conf/: exe-test_IFinternship
_build/default/test/.test_IFinternship.eobjs/byte/: dune__exe__Test_IFinternship.cmi  dune__exe__Test_IFinternship.cmti
_build/default/test/.test_IFinternship.eobjs/native/: dune__exe__Test_IFinternship.cmx
_build/install/default/lib/IFinternship/: META  dune-package  opam
lib/: dune
test/: dune
